install SVG module in Dockerfile
Currently docker-compose up gives

app_1  | Can't load application from file "/opt/webwork/webwork2/bin/webwork2": Can't locate SVG.pm in @INC (you may need to install the SVG module) (@INC contains: /opt/webwork/pg/lib /opt/webwork/webwork2/lib /etc/perl /usr/local/lib/x86_64-linux-gnu/perl/5.34.0 /usr/local/share/perl/5.34.0 /usr/lib/x86_64-linux-gnu/perl5/5.34 /usr/share/perl5 /usr/lib/x86_64-linux-gnu/perl-base /usr/lib/x86_64-linux-gnu/perl/5.34 /usr/share/perl/5.34 /usr/local/lib/site_perl) at /opt/webwork/webwork2/lib/WeBWorK/ContentGenerator/Instructor/Stats.pm line 33.

--- a/DockerfileStage1
+++ b/DockerfileStage1
@@ -138,7 +138,7 @@ RUN apt-get update \
 # ==================================================================
 # Phase 3 - install additional Perl modules from CPAN (not packaged for Ubuntu or outdated in Ubuntu)
 
-RUN cpanm install Statistics::R::IO \
+RUN cpanm install Statistics::R::IO SVG \
 	&& rm -fr ./cpanm /root/.cpanm /tmp/*
 
 # ==================================================================
